# cuda-debug-examples

./: README.md
debug_cuda_application/include/: my_functions.hpp
debug_cuda_application/src/: main.cpp  my_functions.cu
debug_cuda_example/: CMakeLists.txt
debug_cuda_example/src/: main.cu
debug_cuda_malmult/: CMakeLists.txt
debug_cuda_malmult/include/: my_functions.hpp
debug_cuda_malmult/src/: main.cpp  my_functions.cu
